[package]
name = "perceptron-procgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
clap = "4.0"
futures-executor = "0.3"
image = "0.24"
nalgebra = "0.31"
naga = "0.10"
rand = "0.8"
regex = "1.7"
serde_json = "1.0"
wgpu = "0.14"

[patch.crates-io]
naga = { git = "https://github.com/gfx-rs/naga", rev = "5d8fc3fdcf676c2bf67e20d5475e1169da9ac3d5" }
